--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <ul>
             <li>
               <ul>
-                <li>
+                <!-- <li>
                   <span tooltip="" class="real_age">19</span>
                   years old
-                </li><!--
+                </li>--><!--
                 --><li>From Morocco</li><!--
                 --><li>Living in St. John's, Canada</li>
               </ul>
@@ -98,12 +98,12 @@
           </video>
         </li>
         <li>
-          <p><a href="https://github.com/ahamSel/flutter_chat_app" target="_blank"><b>Chat [Dart, Flutter]</b></a> is a simple chat app that provides the service of sending and receiving messages. An optimized database schema is used for efficient storage and retrieval of data, including messages, user information, and chat conversations. The app also utilizes a cloud messaging system to send and receive notifications about new messages when it is not in the foreground.</p>
+          <p><a href="https://github.com/ahamSel/flutter_chat_app" target="_blank"><b>Chat [Dart, Flutter]</b></a> is a mobile chat app that provides the service of sending and receiving messages. An optimized database schema is used for efficient storage and retrieval of data, including messages, user information, and chat conversations. The app also utilizes a cloud messaging system to send and receive notifications about new messages when it is not in the foreground.</p>
         </li>
       </ul>
       <ul>
         <li>
-          <p><a href="https://github.com/ahamSel/flutter_firebase_login_signup" target="_blank"><b>Authentication & Database with Firebase [Dart, Flutter]</b></a> is an app that provides a range of essential functionalities such as Sign-Up/Log-In, Google Sign-In and linking, email confirmation, password reset, and the ability to add or modify personal information. Additionally, the app allows showing real-time users from the database. This functionality can be used to display any type of data or updates in real-time.</p>
+          <p><a href="https://github.com/ahamSel/flutter_firebase_login_signup" target="_blank"><b>Authentication & Database with Firebase [Dart, Flutter]</b></a> is a mobile app that provides a range of essential functionalities such as Sign-Up/Log-In, Google Sign-In and linking, email confirmation, password reset, and the ability to add or modify personal information. Additionally, the app allows showing real-time users from the database. This functionality can be used to display any type of data or updates in real-time.</p>
         </li>
         <li>
           <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="./images/auth_db_poster.jpg">
@@ -120,12 +120,12 @@
           </video>
         </li>
         <li>
-          <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>World Times [Dart, Flutter]</b></a> is an app that uses API calling to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all the regions presented in a scrollable listview, or use an implemented search bar to find their desired one.</p>
+          <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>World Times [Dart, Flutter]</b></a> is a mobile app to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all the regions presented in a scrollable list-view or use an implemented search bar to find their desired one.</p>
         </li>
       </ul>
       <ul>
         <li>
-          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> A game where the player has to dodge balls constantly ricocheting off the walls. Each ball grows and pops into three small ones that act as their parent. There are also powerups to help survive longer. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
+          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is a game where the player must dodge balls constantly bouncing off walls. Each ball grows and pops into three small ones that act as their parent. Powerups are implemented to help survive longer. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
         </li>
         <li>
           <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="./images/gwa_poster.jpg">
@@ -143,7 +143,7 @@
         </video>
       </li>
       <li>
-        <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is a short game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
+        <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
       </li>
       </ul>
     </div>
