--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
           <ul>
             <li>
               <ul>
-                <!-- <li>
-                  <span tooltip="" class="real_age">19</span>
-                  years old
-                </li>--><!--
+                <!--
                 --><li>From Morocco</li><!--
                 --><li>Living in St. John's, Canada</li>
               </ul>
@@ -120,12 +117,12 @@
           </video>
         </li>
         <li>
-          <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>World Times [Dart, Flutter]</b></a> is a mobile app to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all the regions presented in a scrollable list-view or use an implemented search bar to find their desired one.</p>
+          <p><a href="https://github.com/ahamSel/world_time_fapp" target="_blank"><b>World Times [Dart, Flutter]</b></a> is a mobile app to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all the regions presented in a scrollable list-view or use an implemented search bar to find their desired one.</p>
         </li>
       </ul>
       <ul>
         <li>
-          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is a game where the player must dodge balls constantly bouncing off walls. Each ball grows and pops into three small ones that act as their parent. Powerups are implemented to help survive longer. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
+          <p><a href="https://github.com/ahamSel/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is a game where the player must dodge balls constantly bouncing off walls. Each ball grows and pops into three small ones that act as their parent. Powerups are implemented to help survive longer. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
         </li>
         <li>
           <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="./images/gwa_poster.jpg">
@@ -143,15 +140,12 @@
         </video>
       </li>
       <li>
-        <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
+        <p><a href="https://github.com/ahamSel/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
       </li>
       </ul>
     </div>
     <h1 id="contactme">Contact Me</h1>
-    <!-- <div class="contact_infos">
-      <span style="margin: 20px;">E-mail: <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a></span>
-    </div> -->
-    <form action="https://formsubmit.co/ess.ahmed.amine@gmail.com" method="post">
+    <form action="https://formsubmit.co/b4ea46c88a0c7b732ba84144c7b3275b" method="post">
       <ul>
         <li>
           <label for="name">Name:</label>
@@ -177,10 +171,8 @@
       <input type="text" name="_honey" style="display: none;">
       <!-- disables reCAPTCHA -->
       <input type="hidden" name="_captcha" value="false">
-      <!-- custom thank you page -->
+      <!-- thank you page -->
       <input type="hidden" name="_next" value="https://ahamsel.github.io/portfolio_website/thankyou.html">
     </form>
   </body>
 </html>
-
-<!-- https://formsubmit.co used to send message -->
