--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <li>
               <ul>
                 <!--
-                --><li>From Morocco</li><!--
                 --><li>Living in St. John's, Canada</li>
               </ul>
             </li><!--
@@ -79,8 +78,7 @@
                 --><li>Mathematics</li>
               </ul>
             </li><!--
-            --><li>Linux</li><!--
-            --><li>Fitness & Health</li>
+            --><li>Linux</li>
           </ul>
         </li>
       </ul>
