--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <li>
           I'm passionate about
           <ul>
-            <li>
-              Coding
+          <li>Solving problems</li><!--
+            --><li>
+              Programming
               <ul>
                 <li>Python</li><!--
                 --><li>C#</li><!--
@@ -70,20 +71,15 @@
                 --><li>New skills</li>
               </ul>
             </li><!--
-            --><li>Solving problems</li><!--
             --><li>
-              Tutoring
-              <ul>
-                <li>Programming</li><!--
-                --><li>Mathematics</li>
-              </ul>
+              Mathematics
             </li><!--
             --><li>Linux</li>
           </ul>
         </li>
       </ul>
     </div>
-    <h1 id="projects"><span style="font-size: 10px; font-weight: 100;">some </span>Projects</h1>
+    <h1 id="projects">Projects</h1>
     <div align="center" class="projects-items">
       <ul>
         <li>
@@ -120,7 +116,7 @@
       </ul>
       <ul>
         <li>
-          <p><a href="https://github.com/ahamSel/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is a game where the player must dodge balls constantly bouncing off walls. Each ball grows and pops into three small ones that act as their parent. Powerups are implemented to help survive longer. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
+          <p><a href="https://github.com/ahamSel/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is a game where the player must dodge balls constantly bouncing off walls. Each ball grows and pops into three small ones that act as their parent. Powerups are implemented to help survive longer. Try out <a href="https://aaess.itch.io/game-without-art" target="_blank">the game on Itch.io</a>!</p>
         </li>
         <li>
           <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="./images/gwa_poster.jpg">
@@ -129,7 +125,7 @@
           </video>
         </li>
       </ul>
-      <ul>
+      <!-- <ul>
         <li>
           <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline
           poster="./images/dotdodge_poster.jpg">
@@ -140,7 +136,7 @@
       <li>
         <p><a href="https://github.com/ahamSel/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
       </li>
-      </ul>
+      </ul> -->
     </div>
     <h1 id="contactme">Contact Me</h1>
     <form action="https://formsubmit.co/b4ea46c88a0c7b732ba84144c7b3275b" method="post">
