--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=0.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/x-icon" href="./images/title_icon1.ico">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" type="image/x-icon" href="../images/title_icon1.ico">
     <title>ahames - Thank you for your message!</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <strong style="font-size: 80px;">Thank you!</strong>
             </li>
             <li>
-                <button><a href="./index.html">Go&nbsp;Back</a></button>
+                <button><a href="./contact.html">Go&nbsp;Back</a></button>
             </li>
         </ul>
     </div>
