refactor for aboutme path

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <button><a href="./aboutme.html">About&nbsp;me</a></button>
+        <button><a href="../aboutme.html">About&nbsp;me</a></button>
         <button><a href="./projects.html">Projects</a></button>
         <button><a href="./contact.html">Contact</a></button>
         <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
