--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=0.0">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/title_icon.ico">
     <title>About Me - ahamSel</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <button><a href="./aboutme.html">About&nbsp;me</a></button>
         <button><a href="./projects.html">Projects</a></button>
         <button><a href="./contact.html">Contact</a></button>
-        <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
+        <button><a href="./docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
     <h1 id="me">whoami</h1>
@@ -79,6 +79,6 @@
         </ul>
       </div>
 
-    <script src="../script.js" defer></script>
+    <script src="./script.js" defer></script>
 </body>
 </html>
