no extension test

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=0.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" type="image/x-icon" href="./images/title_icon.ico">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
     <title>About Me - ahamSel</title>
 </head>
 <body>
     <nav>
-        <button><a href="./aboutme.html">About&nbsp;me</a></button>
-        <button><a href="./projects.html">Projects</a></button>
-        <button><a href="./contact.html">Contact</a></button>
+        <button><a href="./aboutme">About&nbsp;me</a></button>
+        <button><a href="./projects">Projects</a></button>
+        <button><a href="./contact">Contact</a></button>
         <button><a href="./docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
@@ -79,6 +79,6 @@
         </ul>
       </div>
 
-    <script src="./script.js" defer></script>
+    <script src="../script.js" defer></script>
 </body>
 </html>
