--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <nav>
-        <button><a href="../aboutme.html">About&nbsp;me</a></button>
-        <button><a href="./projects.html">Projects</a></button>
-        <button><a href="./contact.html">Contact</a></button>
+        <button><a href="./aboutme">About&nbsp;me</a></button>
+        <button><a href="./projects">Projects</a></button>
+        <button><a href="./contact">Contact</a></button>
         <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
@@ -44,7 +44,7 @@
         <!-- disables reCAPTCHA -->
         <input type="hidden" name="_captcha" value="false">
         <!-- thank you page -->
-        <input type="hidden" name="_next" value="https://ahamsel.github.io/portfolio_website/thankyou.html">
+        <input type="hidden" name="_next" value="https://ahamsel.github.io/portfolio_website/thankyou">
       </form>
 
     <script src="../script.js" defer></script>
