--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -15,7 +15,7 @@
                 <strong style="font-size: 80px;">Thank you!</strong>
             </li>
             <li>
-                <button><a href="./contact.html">Go&nbsp;Back</a></button>
+                <button><a href="./contact">Go&nbsp;Back</a></button>
             </li>
         </ul>
     </div>
