--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <nav>
-        <button><a href="../aboutme.html">About&nbsp;me</a></button>
-        <button><a href="./projects.html">Projects</a></button>
-        <button><a href="./contact.html">Contact</a></button>
+        <button><a href="./aboutme">About&nbsp;me</a></button>
+        <button><a href="./projects">Projects</a></button>
+        <button><a href="./contact">Contact</a></button>
         <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
