+ linkedin linked in contact - /extension

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,13 +10,16 @@
 </head>
 <body>
     <nav>
-        <button><a href="./aboutme">About&nbsp;me</a></button>
+        <button><a href="./about">About</a></button>
         <button><a href="./projects">Projects</a></button>
         <button><a href="./contact">Contact</a></button>
         <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
-    <h1 id="contactme">Contact Me</h1>
+    <h1 id="contactme">Get in touch!<a href="https://www.linkedin.com/in/ahmed-amine-es-selmouni-b57585239/" target="_blank">
+        <img src="../images/linkedin.png" alt="LinkedIn" width="30" height="30">
+      </a></h1>
+    
     <form action="https://formsubmit.co/b4ea46c88a0c7b732ba84144c7b3275b" method="post">
         <ul>
           <li>
