--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <button><a href="./aboutme">About&nbsp;me</a></button>
+        <button><a href="./about">About</a></button>
         <button><a href="./projects">Projects</a></button>
         <button><a href="./contact">Contact</a></button>
         <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
@@ -53,7 +53,7 @@
         </ul>
         <ul>
           <li>
-            <p><a href="https://github.com/ahamSel/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is a game where the player must dodge balls constantly bouncing off walls. Each ball grows and pops into three small ones that act as their parent. Powerups are implemented to help survive longer. Try out <a href="https://aaess.itch.io/game-without-art" target="_blank">the game on Itch.io</a>!</p>
+            <p><a href="https://github.com/ahamSel/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is a game where the player must dodge balls constantly bouncing off walls. Each ball grows and pops into three small ones that act as their parent. Powerups are implemented to help survive longer. <a href="https://aaess.itch.io/game-without-art" target="_blank">Try it out!</a></p>
           </li>
           <li>
             <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="../images/gwa_poster.jpg">
