--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=./pages/aboutme">
+    <meta http-equiv="refresh" content="0;url=./pages/about">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" type="image/x-icon" href="./images/title_icon.ico">
     <title>ahamSel</title>
