--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <button><a href="./aboutme">About&nbsp;me</a></button>
+        <button><a href="./about">About</a></button>
         <button><a href="./projects">Projects</a></button>
         <button><a href="./contact">Contact</a></button>
         <button><a href="./docs/resume.pdf" target="_blank">Resume</a></button>
