--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=0.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" type="image/x-icon" href="../images/title_icon1.ico">
-    <title>ahames - Thank you for your message!</title>
+    <title>Thank you for your message! - ahamSel</title>
 </head>
 <body>
     <div class="success" align="center">
