--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
         <button><a href="./about">About</a></button>
         <button><a href="./projects">Projects</a></button>
         <button><a href="./contact">Contact</a></button>
-        <button><a href="./docs/resume.pdf" target="_blank">Resume</a></button>
+        <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
     <h1 id="me">whoami</h1>
@@ -79,6 +79,6 @@
         </ul>
       </div>
 
-    <script src="../script.js" defer></script>
+    <script src="../scripts/nav.js" defer></script>
 </body>
 </html>
