--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,6 +50,6 @@
         <input type="hidden" name="_next" value="https://ahamsel.github.io/portfolio_website/thankyou">
       </form>
 
-    <script src="../script.js" defer></script>
+    <script src="../scripts/nav.js" defer></script>
 </body>
 </html>
