--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,7 +17,39 @@
     </nav>
 
     <h1 id="projects">Projects</h1>
-    <div align="center" class="projects-items">
+    <div align="center" class="project-items">
+        <!-- <ul>
+          <li>
+            <video class="lazy" width="546.6px" height="600px" autoplay muted loop playsinline poster="../images/chat_poster.jpg">
+              <source data-src="../videos/chat_vid.webm" type="video/webm">
+              <source data-src="../videos/chat_vid.mp4" type="video/mp4">
+            </video>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="../images/auth_db_poster.jpg">
+              <source data-src="../videos/auth_db_vid.webm" type="video/webm">
+              <source data-src="../videos/auth_db_vid.mp4" type="video/mp4">
+            </video>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="../images/worldtimes_poster.jpg">
+              <source data-src="../videos/worldtimes_vid.webm" type="video/webm">
+              <source data-src="../videos/worldtimes_vid.mp4" type="video/mp4">
+            </video>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="../images/gwa_poster.jpg">
+              <source data-src="../videos/gwa_vid.webm" type="video/webm">
+              <source data-src="../videos/gwa_vid.mp4" type="video/mp4">
+            </video>
+          </li>
+        </ul> -->
         <!-- <ul>
           <li>
             <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline
@@ -32,6 +64,7 @@
         </ul> -->
       </div>
 
-    <script src="../script.js" defer></script>
+    <script src="../scripts/nav.js" defer></script>
+    <script src="../scripts/projects.js" defer></script>
 </body>
 </html>
