--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,52 +17,7 @@
     </nav>
 
     <h1 id="projects">Projects</h1>
-    <div align="center" class="project-items">
-        <!-- <ul>
-          <li>
-            <video class="lazy" width="546.6px" height="600px" autoplay muted loop playsinline poster="../images/chat_poster.jpg">
-              <source data-src="../videos/chat_vid.webm" type="video/webm">
-              <source data-src="../videos/chat_vid.mp4" type="video/mp4">
-            </video>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="../images/auth_db_poster.jpg">
-              <source data-src="../videos/auth_db_vid.webm" type="video/webm">
-              <source data-src="../videos/auth_db_vid.mp4" type="video/mp4">
-            </video>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="../images/worldtimes_poster.jpg">
-              <source data-src="../videos/worldtimes_vid.webm" type="video/webm">
-              <source data-src="../videos/worldtimes_vid.mp4" type="video/mp4">
-            </video>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="../images/gwa_poster.jpg">
-              <source data-src="../videos/gwa_vid.webm" type="video/webm">
-              <source data-src="../videos/gwa_vid.mp4" type="video/mp4">
-            </video>
-          </li>
-        </ul> -->
-        <!-- <ul>
-          <li>
-            <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline
-            poster="./images/dotdodge_poster.jpg">
-            <source data-src="./videos/dotdodge_vid.webm" type="video/webm">
-            <source data-src="./videos/dotdodge_vid.mp4" type="video/mp4">
-          </video>
-        </li>
-        <li>
-          <p><a href="https://github.com/ahamSel/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
-        </li>
-        </ul> -->
-      </div>
+    <div align="center" class="project-items"></div>
 
     <script src="../scripts/nav.js" defer></script>
     <script src="../scripts/projects.js" defer></script>
