--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,10 +16,14 @@
         <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
-    <h1 id="projects">Some of my projects<br><br><span style="font-size: 35px;">More on Github</span><a href="https://github.com/ahamSel" target="_blank">
-        <img src="../images/github.png" alt="GitHub" width="30" height="30">
-      </a></h1>
+    <h1 id="projects">Some of my projects</h1>
     <div align="center" class="project-items"></div>
+
+    <h1 class="projects-footer">
+        <span style="font-size: 35px;">More on Github</span><a href="https://github.com/ahamSel" target="_blank">
+            <img src="../images/github.png" alt="GitHub" width="30" height="30">
+          </a>
+    </h1>
 
     <script src="../scripts/nav.js" defer></script>
     <script src="../scripts/projects.js" defer></script>
