new linkedin profile url

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
         <button><a href="../docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
 
-    <h1 id="contactme">Get in touch!<a href="https://www.linkedin.com/in/ahmed-amine-es-selmouni-b57585239/" target="_blank">
+    <h1 id="contactme">Get in touch!<a href="https://www.linkedin.com/in/aaesselmouni/" target="_blank">
         <img src="../images/linkedin.png" alt="LinkedIn" width="30" height="30">
       </a></h1>
     
