thankyou style fix

--- a/pages/about.html
+++ b/pages/about.html
@@ -71,7 +71,7 @@
                 </ul>
               </li><!--
               --><li>
-                Mathematics
+                Math
               </li><!--
               --><li>Linux</li>
             </ul>
