--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
     <div class="tree">
         <ul>
           <li>
-            Ahmed Amine Es-selmouni
+            Ahmed Amine Es-Selmouni
             <ul>
               <li>
                 <ul>
