--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
                 </ul>
               </li><!--
               --><li>
-                Current undergraduate at
+                Current undergrad @
                 <a href="https://mun.ca/" target="_blank"
                   >MUN</a
                 >
