--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
                   >MUN</a
                 >
                 <ul>
-                  <li>Computer Science major</li>
+                  <li>CS major</li>
                 </ul>
               </li>
             </ul>
@@ -44,7 +44,7 @@
       <div class="tree">
         <ul>
           <li>
-            I'm passionate about
+            I enjoy
             <ul>
             <li>Solving problems</li><!--
               --><li>
