--- a/pages/about.html
+++ b/pages/about.html
@@ -3,81 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=0.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
     <title>About Me - ahamSel</title>
 </head>
 <body>
     <nav>
-        <button><a href="./about">About</a></button>
-        <button><a href="./projects">Projects</a></button>
-        <button><a href="./contact">Contact</a></button>
-        <button><a href="../docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a></button>
+        <a href="./about">About</a>
+        <a href="./projects">Projects</a>
+        <a href="./contact">Contact</a>
+        <a href="../docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
     </nav>
 
     <h1 id="me">whoami</h1>
+    <div style="text-align: center;" ><span style="font-size: 2rem;" >Hi! 👋🏼</span></div>
     <div class="tree">
-        <ul>
-          <li>
-            Ahmed Amine Es-Selmouni
-            <ul>
-              <li>
-                <ul>
-                  <!--
-                  --><li>Living in St. John's, Canada</li>
-                </ul>
-              </li><!--
-              --><li>
-                Current undergrad @
-                <a href="https://mun.ca/" target="_blank"
-                  >MUN</a
-                >
-                <ul>
-                  <li>CS major</li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div class="tree">
-        <ul>
-          <li>
-            I enjoy
-            <ul>
-            <li>Solving problems</li><!--
-              --><li>
-                Programming
-                <ul>
-                  <li>Python</li><!--
-                  --><li>C#</li><!--
-                  --><li>Dart</li>
-                </ul>
-              </li><!--
-              --><li>
-                Developing
-                <ul>
-                  <li>Apps</li><!--
-                  --><li>Games</li>
-                </ul>
-              </li><!--
-              --><li>
-                Learning
-                <ul>
-                  <li>Technologies</li><!--
-                  --><li>Frameworks</li><!--
-                  --><li>New skills</li>
-                </ul>
-              </li><!--
-              --><li>
-                Math
-              </li><!--
-              --><li>Linux</li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          I'm Ahmed Amine Es-Selmouni
+          <ul>
+            <li>
+              <ul>
+                <!--
+                --><li>Living in St. John's, Canada 🍁</li>
+              </ul>
+            </li><!--
+            --><li>
+              Current undergrad 🎓 @
+              <a href="https://mun.ca/" style="font-size: 1.25rem;" target="_blank"
+                >MUN</a
+              >
+              <ul>
+                <li>CS major 👨‍💻</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="tree">
+      <ul>
+        <li>
+          I enjoy
+          <ul>
+          <li>Solving problems 🧩</li><!--
+            --><li>
+              Programming 💻
+              <ul>
+                <li>Python 🐍</li><!--
+                --><li>C#</li><!--
+                --><li>Dart 🎯</li>
+              </ul>
+            </li><!--
+            --><li>
+              Developing
+              <ul>
+                <li>Apps 📱</li><!--
+                --><li>Games 🎮</li>
+              </ul>
+            </li><!--
+            --><li>
+              Learning
+              <ul>
+                <li>Technologies 🖥️</li><!--
+                --><li>Frameworks 🏗️</li><!--
+                --><li>New skills 📘</li>
+              </ul>
+            </li><!--
+            --><li>
+              Math 🧮
+            </li><!--
+            --><li>Linux 🐧</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="about-paragraph">
+      <p>
+        I'm Ahmed Amine Es-Selmouni, a dedicated undergraduate student 🎓 pursuing a major in Computer Science 👨‍💻 at <a href="https://mun.ca/" target="_blank" style="font-size: 1.25rem;" >MUN</a >, living in the beautiful city of St. John's, Canada 🍁. My academic journey is deeply rooted in my love for problem-solving 🧩 and programming 💻, with Python 🐍, C#, and Dart 🎯 being the languages I'm most fluent in. I thrive on developing apps 📱 and games 🎮, constantly seeking out new technologies 🖥️ and frameworks 🏗️ to learn. The logical elegance of mathematics captivates me 🧮, and you'll often find me immersed in the world of Linux 🐧, exploring its intricacies. My passion lies in the intersection of learning and creating, where every new skill is a stepping stone towards building something impactful ✨.
+      </p>
+    </div>
 
     <script src="../scripts/nav.js" defer></script>
 </body>
