--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -3,21 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=0.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../images/title_icon1.ico">
+    <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
     <title>Thank you for your message! - ahamSel</title>
 </head>
-<body>
-    <div class="success" align="center">
-        <ul>
-            <li>
-                <strong style="font-size: 80px;">Thank you!</strong>
-            </li>
-            <li>
-                <button><a href="./contact">Go&nbsp;Back</a></button>
-            </li>
-        </ul>
+<body style="margin: 0; padding: 0;" >
+    <div class="success" align="center" >
+        <h1>Thank you!</h1>
+        <a href="./contact">Go Back</a>
     </div>
 </body>
 </html>
