--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=0.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
     <title>Projects - ahamSel</title>
 </head>
 <body>
     <nav>
-        <button><a href="./about">About</a></button>
-        <button><a href="./projects">Projects</a></button>
-        <button><a href="./contact">Contact</a></button>
-        <button><a href="../docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a></button>
+        <a href="./about">About</a>
+        <a href="./projects">Projects</a>
+        <a href="./contact">Contact</a>
+        <a href="../docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
     </nav>
 
     <h1 id="projects">Some of my projects</h1>
