mobile style tweaks

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,7 +20,7 @@
     <div align="center" class="project-items"></div>
 
     <h1 class="projects-footer">
-        <span style="font-size: 35px;">More on GitHub</span><a href="https://github.com/ahamSel" target="_blank">
+        <span>More on GitHub</span><a href="https://github.com/ahamSel" target="_blank">
             <img src="../images/github.png" alt="GitHub" width="30" height="30">
           </a>
     </h1>
