--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="refresh" content="0;url=./pages/about">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" type="image/x-icon" href="./images/title_icon.ico">
-    <title>ahamSel</title>
+    <title>Portfolio - Ahmed Amine Es-Selmouni</title>
 </head>
 <body></body>
 </html>
