--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
-    <title>Contact Me - ahamSel</title>
+    <title>Contact - Ahmed Amine Es-Selmouni</title>
 </head>
 <body>
     <nav>
