--- a/pages/about.html
+++ b/pages/about.html
@@ -82,7 +82,7 @@
 
     <div class="about-paragraph">
       <p>
-        I'm Ahmed Amine Es-Selmouni, a dedicated undergraduate student 🎓 pursuing a major in Computer Science 👨‍💻 at <a href="https://mun.ca/" target="_blank" style="font-size: 1.25rem;" >MUN</a >, living in the beautiful city of St. John's, Canada 🍁. My academic journey is deeply rooted in my love for problem-solving 🧩 and programming 💻, with Python 🐍, C#, and Dart 🎯 being the languages I'm most fluent in. I thrive on developing apps 📱 and games 🎮, constantly seeking out new technologies 🌐 and frameworks ⚙️ to learn. The logical elegance of mathematics captivates me 🧮, and you'll often find me immersed in the world of Linux 🐧, exploring its intricacies. My passion lies in the intersection of learning and creating, where every new skill 💡 is a stepping stone towards building something impactful ✨.
+        I'm Ahmed Amine Es-Selmouni, a dedicated undergraduate student 🎓 pursuing a major in Computer Science 👨‍💻 at <a href="https://mun.ca/" target="_blank" style="font-size: 1.25rem;" >MUN</a >, living in the beautiful city of St. John's, Canada 🍁. My journey is deeply rooted in my love for problem-solving 🧩 and programming 💻, with Python 🐍, C#, and Dart 🎯 being the languages I'm most fluent in. I thrive on developing apps 📱 and games 🎮, constantly seeking out new technologies 🌐 and frameworks ⚙️ to learn. The logical elegance of mathematics captivates me 🧮, and you'll often find me immersed in the world of Linux 🐧, exploring its intricacies. My passion lies in the intersection of learning and creating, where every new skill 💡 is a stepping stone towards building something impactful ✨.
       </p>
     </div>
 
