--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
+    <link rel="icon" type="image/x-icon" href="../assets/images/title_icon.ico">
     <title>About - Ahmed Amine Es-Selmouni</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <a href="./about">About</a>
         <a href="./projects">Projects</a>
         <a href="./contact">Contact</a>
-        <a href="../docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
+        <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
     </nav>
 
     <h1 id="me">whoami</h1>
