--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
+    <link rel="icon" type="image/x-icon" href="../assets/images/title_icon.ico">
     <title>Contact - Ahmed Amine Es-Selmouni</title>
 </head>
 <body>
@@ -13,11 +13,11 @@
         <a href="./about">About</a>
         <a href="./projects">Projects</a>
         <a href="./contact">Contact</a>
-        <a href="../docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
+        <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
     </nav>
 
     <h1 id="contactme">Get in touch!<a href="https://www.linkedin.com/in/aaesselmouni/" target="_blank">
-        <img src="../images/linkedin.png" alt="LinkedIn" width="30" height="30">
+        <img src="../assets/images/linkedin.png" alt="LinkedIn" width="30" height="30">
       </a></h1>
     
     <form action="https://formsubmit.co/b4ea46c88a0c7b732ba84144c7b3275b" method="post">
