--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
+    <link rel="icon" type="image/x-icon" href="../assets/images/title_icon.ico">
     <title>Projects - Ahmed Amine Es-Selmouni</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <a href="./about">About</a>
         <a href="./projects">Projects</a>
         <a href="./contact">Contact</a>
-        <a href="../docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
+        <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
     </nav>
 
     <h1 id="projects">Some of my projects</h1>
@@ -21,7 +21,7 @@
 
     <h1 class="projects-footer">
         <span>More on GitHub</span><a href="https://github.com/ahamSel" target="_blank">
-            <img src="../images/github.png" alt="GitHub" width="30" height="30">
+            <img src="../assets/images/github.png" alt="GitHub" width="30" height="30">
           </a>
     </h1>
 
