--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../images/title_icon.ico">
+    <link rel="icon" type="image/x-icon" href="../assets/images/title_icon.ico">
     <title>Thank you for your message! - Ahmed Amine Es-Selmouni</title>
 </head>
 <body style="margin: 0; padding: 0;" >
